BUG#34089 "Maria crash on LOAD INDEX after FLUSH TABLES" a typo had not disable LOAD INDEX for Maria. BUG#34161 "freeing maria tmp table after fetching rows using prepared statements - crashes" running the testcase I was not able to repeat the same crash but found a misplaced assertion giving false positive, fixed here.

storage/maria/ha_maria.cc:
  important typo
storage/maria/ma_pagecache.c:
  The assertion on block's type should be after read_block(). Otherwise
  it can give false alarms.